force-app/main/default/objects/HRG_Assignment__c/HRG_Assignment__c.object-meta.xml
<CustomObject>
    <label>HRG Assignment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>HRG Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HRG Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>