force-app/main/default/objects/HRG_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HRG Assignments</relationshipLabel>
    <relationshipName>HRG_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>