force-app/main/default/objects/HRG_Assignment__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <label>Employees</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>