force-app/main/default/objects/HRG_Assignment__c/fields/Override_HRG_User__c.field-meta.xml
<CustomField>
    <fullName>Override_HRG_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The overriden HRG</description>
    <label>Override HRG User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HRG Assignments</relationshipLabel>
    <relationshipName>HRG_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>