force-app/main/default/objects/HRG_Assignment__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <description>Reason for Override</description>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Geographical concerns</fullName>
            </value>
            <value>
                <fullName>Language concerns</fullName>
            </value>
            <value>
                <fullName>Multi ID</fullName>
            </value>
            <value>
                <fullName>Productivity concerns</fullName>
            </value>
            <value>
                <fullName>Round Robin Issue</fullName>
            </value>
            <value>
                <fullName>Segment Issue</fullName>
            </value>
            <value>
                <fullName>Special Request – Client</fullName>
            </value>
            <value>
                <fullName>Special Request – Sales</fullName>
            </value>
            <value>
                <fullName>Strategic Account</fullName>
            </value>
            <value>
                <fullName>Time Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>