force-app/main/default/objects/HRG_Assignment__c/fields/SelectedHRP__c.field-meta.xml
<CustomField>
    <fullName>SelectedHRP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SelectedHRP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HRG Assignments (SelectedHRP)</relationshipLabel>
    <relationshipName>HRG_Assignments1</relationshipName>
    <type>Lookup</type>
</CustomField>