force-app/main/default/objects/HRG_Assignment__c/fields/Spanish_Speaking_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Speaking_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether client has Spanish speaking need</description>
    <label>Spanish Speaking Indicator</label>
    <type>Checkbox</type>
</CustomField>