force-app/main/default/objects/HRG_Assignment__c/validationRules/Approved_with_no_overrides.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_with_no_overrides</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status__c,&apos;Approved&apos;)
, NOT(ISPICKVAL(Override_Reason__c,&apos;&apos;))
,  Override_HRG_User__c !=null)</errorConditionFormula>
    <errorMessage>Override Reason and Override User must be empty when not Overriding Selected HRG</errorMessage>
</ValidationRule>