force-app/main/default/objects/HRG_Assignment__c/validationRules/Manager_Override_and_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Manager_Override_and_Reason</fullName>
    <active>true</active>
    <description>if manager overrides Selected HRG they must have an override reason as well.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Manager Override&apos;), OR(ISBLANK(TEXT(Override_Reason__c)),(Override_HRG_User__c==null)))</errorConditionFormula>
    <errorMessage>Please Select An &apos;Override Reason&apos; or &apos;Override User&apos; while Overriding</errorMessage>
</ValidationRule>