force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMicroQueue1SS_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMicroQueue1SS_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMicroQueue1SS</label>
    <queue>HRGAutoMicroQueue1SS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>