force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMicroQueue2SS_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMicroQueue2SS_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMicroQueue2SS</label>
    <queue>HRGAutoMicroQueue2SS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>