force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMicroQueue3_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMicroQueue3_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMicroQueue3</label>
    <queue>HRGAutoMicroQueue3</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>