force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMicroQueue4SS_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMicroQueue4SS_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMicroQueue4SS</label>
    <queue>HRGAutoMicroQueue4SS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>