force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMicroQueue5_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMicroQueue5_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMicroQueue5</label>
    <queue>HRGAutoMicroQueue5</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>