force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMicroQueue5SS_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMicroQueue5SS_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMicroQueue5SS</label>
    <queue>HRGAutoMicroQueue5SS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>