force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMicroQueue6SS_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMicroQueue6SS_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMicroQueue6SS</label>
    <queue>HRGAutoMicroQueue6SS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>