force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMicroQueue7_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMicroQueue7_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMicroQueue7</label>
    <queue>HRGAutoMicroQueue7</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>