force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMMQueue1_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMMQueue1_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMMQueue1</label>
    <queue>HRGAutoMMQueue1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>