force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMMQueue2_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMMQueue2_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMMQueue2</label>
    <queue>HRGAutoMMQueue2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>