force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMMQueue2SS_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMMQueue2SS_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMMQueue2SS</label>
    <queue>HRGAutoMMQueue2SS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>