force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMMQueue3SS_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMMQueue3SS_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMMQueue3SS</label>
    <queue>HRGAutoMMQueue3SS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>