force-app/main/default/objects/HRG_Assignment__c/listViews/HRGAutoMMQueue4SS_HRG_Assignment.listView-meta.xml
<ListView>
    <fullName>HRGAutoMMQueue4SS_HRG_Assignment</fullName>
    <filterScope>Queue</filterScope>
    <label>HRGAutoMMQueue4SS</label>
    <queue>HRGAutoMMQueue4SS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>